# Excelsis-Data-Analyst-Agent

./: .env.example  .env.test  .gitignore  =0.2.0  CLAUDE.md  Excelsis.ipynb  LICENSE  README.md  generate_docs.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.claude/: settings.json
api/: auth.py  deps.py  limiter.py  main.py  models.py  users.json
api/routers/: auth.py  chat.py  dashboard.py  data.py
docker/: .env.example  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: api_health.json  business_metrics.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
docs/: attendance_policy.md  data_policy.md
scripts/: seed_attendance_variety.py  seed_low_attendance.py  seed_test_db.py
src/: agent.py  dashboard.py  data_store.py  mcp_server.py  prompt_guard.py  rag_ingestor.py  rag_store.py  security.py  sql_store.py  tools.py  tracker.py  vector_store.py
tests/: conftest.py  fixtures.py  test_qa.py  test_security.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/api/: client.ts
web/src/components/: Breadcrumb.tsx  ChatPanel.tsx  DrilldownPanel.tsx  FilterBar.tsx  MessageBubble.tsx  ProtectedRoute.tsx  Sidebar.tsx
web/src/components/charts/: AttendanceByClassChart.tsx  MetricBreakdownChart.tsx  MetricByGroupChart.tsx  StatusDonutChart.tsx  TrendComparisonChart.tsx  WeekdayBarChart.tsx  WeeklyTrendChart.tsx
web/src/hooks/: useChartSelection.ts  useDashboardData.ts
web/src/lib/: constants.ts  suggestions.ts  useChat.ts
web/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Users.tsx
